<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="about">About</string>
    <string name="all_folders">All folders</string>
    <string name="already_exists">A file with that name already exists</string>
    <string name="app_launcher_name">FoxitGallery</string>
    <string name="app_long_description">"A simple tool usable for viewing photos and videos. Items can be sorted by date, size, name both ascending or descending, photos can be zoomed in. Media files are shown in multiple columns, depending on the size of the display. They can be renamed, shared, deleted, copied, moved. Images can also be cropped, rotated or set as Wallpaper directly from the app. The FoxitGallery is also offered for third party usage for previewing images / videos, adding attachments at email clients etc. It's perfect for everyday usage. Contains no ads or unnecessary permissions. It is fully opensource, provides a Dark theme too. This app is just one piece of a bigger series of apps."</string>
    <string name="app_name">Simple Gallery</string>
    <string name="app_short_description">A Foxitgallery for viewing photos and videos without ads.</string>
    <string name="ascending">Ascending</string>
    <string name="autoplay_videos">Play videos automatically</string>
    <string name="cancel">Cancel</string>
    <string name="copy">Copy</string>
    <string name="copy_failed">Could not copy the files</string>
    <string name="copy_item">Copy item</string>
    <string name="copy_items">Copy items</string>
    <string name="copy_move">Copy/Move</string>
    <string name="copy_move_failed">An error occurred</string>
    <string name="copying">Copying…</string>
    <string name="copying_success">Files copied successfully</string>
    <string name="copying_success_partial">Some files could not be copied</string>
    <string name="copyright">"v %1$s
Copyright © Simple Mobile Tools %2$d"</string>
    <string name="cropper_title">&lt;u>Android Image Cropper (image crop and rotate)&lt;/u></string>
    <string name="dark_theme">Dark theme</string>
    <string name="date_taken">Date taken</string>
    <string name="delete">Delete</string>
    <string name="deleting">Deleting</string>
    <string name="descending">Descending</string>
    <string name="destination">Destination</string>
    <string name="donate_underlined">&lt;u>Donate&lt;/u></string>
    <string name="edit">Edit</string>
    <string name="edit_image_with">Edit image with:</string>
    <string name="editor">Editor</string>
    <string name="email_label" />
    <string name="error_saving_file">Could not overwrite the source file</string>
    <string name="extension">Extension</string>
    <string name="extension_cannot_be_empty">Extension cannot be empty</string>
    <string name="file_deleted">File deleted</string>
    <string name="file_saved">File saved successfully</string>
    <string name="filename_cannot_be_empty">Filename cannot be empty</string>
    <string name="filename_invalid_characters">Filename contains invalid characters</string>
    <string name="filepicker_title">&lt;u>Simple File Picker (filepicker dialog)&lt;/u></string>
    <string name="fileproperties_title">&lt;u>Simple File Properties (properties dialog)&lt;/u></string>
    <string name="folder_view">Switch to folder view</string>
    <string name="follow_us" />
    <string name="glide_title">&lt;u>Glide (image loading and caching)&lt;/u></string>
    <string name="height">Height</string>
    <string name="hidden">(hidden)</string>
    <string name="hide_folder">Hide folder</string>
    <string name="image_editing_failed">Image editing failed</string>
    <string name="images">Images only</string>
    <string name="images_and_videos">Images and videos</string>
    <string name="invalid_destination">Could not write to the selected destination</string>
    <string name="invalid_image_path">Invalid image path</string>
    <string name="invalid_name">The name contains invalid characters</string>
    <string name="invalid_values">Please enter a valid resolution</string>
    <string name="invite_friends_underlined">&lt;u>Invite friends&lt;/u></string>
    <string name="invite_via">Invite via</string>
    <string name="keep_aspect_ratio">Keep aspect ratio</string>
    <string name="kotlin_title">&lt;u>Kotlin (programming language)&lt;/u></string>
    <string name="last_modified">Last modified</string>
    <string name="more_apps_underlined">&lt;u>More apps&lt;/u></string>
    <string name="move">Move</string>
    <string name="moving">Moving…</string>
    <string name="moving_success">Files moved successfully</string>
    <string name="moving_success_partial">Some files could not be moved</string>
    <string name="multiselect_title">&lt;u>RecyclerView MultiSelect (selecting multiple list items)&lt;/u></string>
    <string name="name">Name</string>
    <string name="no_app_found">No valid app found</string>
    <string name="no_editor_found">No image editor found</string>
    <string name="no_permissions">Not much to do in a gallery without accessing your storage</string>
    <string name="no_wallpaper_setter_found">No app capable of it has been found</string>
    <string name="notice">This app uses the following third party libraries to make my life easier. Thank you.</string>
    <string name="ok">OK</string>
    <string name="open_camera">Open camera</string>
    <string name="open_with">Open with</string>
    <string name="other_folder">Other folder</string>
    <string name="path">Path</string>
    <string name="pin_folder">Pin folder</string>
    <string name="please_select_destination">Please select a destination</string>
    <string name="properties">Properties</string>
    <string name="rate_us_underlined" />
    <string name="rename">Rename</string>
    <string name="rename_file">Rename file</string>
    <string name="rename_file_error">Could not rename the file</string>
    <string name="rename_folder">Rename folder</string>
    <string name="rename_folder_empty">Folder name must not be empty</string>
    <string name="rename_folder_error">Could not rename the folder</string>
    <string name="rename_folder_exists">A folder with that name already exists</string>
    <string name="rename_folder_ok">Folder renamed successfully</string>
    <string name="rename_folder_root">Cannot rename the root folder of a storage</string>
    <string name="renaming_folder">Renaming folder</string>
    <string name="resize">Resize</string>
    <string name="resize_and_save">Resize selection and save</string>
    <string name="rotate">Rotate</string>
    <string name="rtl_viewpager_title">&lt;u>RtlViewPager (for swiping images right to left)&lt;/u></string>
    <string name="same_sorting">Same sorting for files and folders</string>
    <string name="save">Save</string>
    <string name="save_as">Save as</string>
    <string name="select_all">Select all</string>
    <string name="select_destination">Select destination</string>
    <string name="set_as_wallpaper">Set as Wallpaper</string>
    <string name="set_as_wallpaper_failed">Setting as Wallpaper failed</string>
    <string name="set_as_wallpaper_with">Set as wallpaper with:</string>
    <string name="setting_wallpaper">Setting wallpaper…</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="share_text">Hey, come check out %1$s at %2$s</string>
    <string name="share_via">Share via</string>
    <string name="show_all">Show all folders content</string>
    <string name="show_hidden_folders">Show hidden folders</string>
    <string name="show_media">Show media</string>
    <string name="simple_wallpaper">Simple Wallpaper</string>
    <string name="size">Size</string>
    <string name="smtfp_cancel">Cancel</string>
    <string name="smtfp_confirm_storage_access_text">Please choose the root folder of the SD card on the next screen, to grant write access</string>
    <string name="smtfp_confirm_storage_access_title">Confirm external storage access</string>
    <string name="smtfp_internal">Internal</string>
    <string name="smtfp_no">No</string>
    <string name="smtfp_no_permission">Debug: missing Read Storage permission</string>
    <string name="smtfp_ok">OK</string>
    <string name="smtfp_proceed_with_deletion">Are you sure you want to proceed with the deletion?</string>
    <string name="smtfp_root">Root</string>
    <string name="smtfp_sd_card">SD Card</string>
    <string name="smtfp_select_file">Select a file</string>
    <string name="smtfp_select_folder">Select a folder</string>
    <string name="smtfp_select_storage">Select storage</string>
    <string name="smtfp_yes">Yes</string>
    <string name="smtpr_album">Album</string>
    <string name="smtpr_artist">Artist</string>
    <string name="smtpr_cancel">Cancel</string>
    <string name="smtpr_direct_children_count">Direct children count</string>
    <string name="smtpr_duration">Duration</string>
    <string name="smtpr_files_count">Total files count</string>
    <string name="smtpr_items_selected">Items selected</string>
    <string name="smtpr_last_modified">Last modified</string>
    <string name="smtpr_name">Name</string>
    <string name="smtpr_ok">OK</string>
    <string name="smtpr_path">Path</string>
    <string name="smtpr_properties">Properties</string>
    <string name="smtpr_resolution">Resolution</string>
    <string name="smtpr_size">Size</string>
    <string name="sort_by">Sort by</string>
    <string name="source">Source</string>
    <string name="source_and_destination_same">Source and destination cannot be the same</string>
    <string name="subsampling_title">&lt;u>Subsampling Scale Image View (zoomable imageviews)&lt;/u></string>
    <string name="third_party_licences" />
    <string name="third_party_licences_underlined" />
    <string name="toggle_filename">Toggle filename visibility</string>
    <string name="undo">Undo</string>
    <string name="unhide_folder">Unhide folder</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="unknown_file_location">Unknown file location</string>
    <string name="unpin_folder">Unpin folder</string>
    <string name="videos">Videos only</string>
    <string name="website" />
    <string name="cropper_text" />
    <string name="email" />
    <string name="filepicker_text" />
    <string name="fileproperties_text" />
    <string name="glide_text" />
    <string name="kotlin_text" />
    <string name="multiselect_text" />
    <string name="rtl_viewpager_text" />
    <string name="subsampling_text" />
</resources>