<?xml version="1.0" encoding="utf-8"?>
<menu>
    <item app:icon="@mipmap/sort" app:id="@id/sort" app:title="@string/sort_by" app:showAsAction="1" />
    <item app:icon="@mipmap/toggle_filename" app:id="@id/toggle_filename" app:title="@string/toggle_filename" app:showAsAction="1" />
    <item app:icon="@mipmap/camera" app:id="@id/open_camera" app:title="@string/open_camera" app:showAsAction="1" />
    <item app:id="@id/folder_view" app:title="@string/folder_view" app:showAsAction="0" />
    <item app:id="@id/hide_folder" app:title="@string/hide_folder" app:showAsAction="0" />
    <item app:id="@id/unhide_folder" app:title="@string/unhide_folder" app:showAsAction="0" />
    <item app:id="@id/settings" app:title="@string/settings" app:showAsAction="0" />
    <item app:id="@id/about" app:title="@string/about" app:showAsAction="0" />
</menu>
