<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/about_scrollview" android:layout_width="-1" android:layout_height="-1" android:fillViewport="true">
    <RelativeLayout android:id="@id/about_holder" android:padding="@dimen/activity_margin" android:layout_width="-1" android:layout_height="-2">
        <TextView android:autoLink="1" android:id="@id/about_website" android:layout_width="-1" android:layout_height="-2" android:text="@string/website" />
        <TextView android:id="@id/about_email_label" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="@dimen/activity_margin" android:text="@string/email_label" android:layout_below="@id/about_website" />
        <TextView android:id="@id/about_email" android:paddingBottom="@dimen/activity_margin" android:layout_width="-1" android:layout_height="-2" android:text="@string/email" android:layout_below="@id/about_email_label" />
        <TextView android:textColor="@color/colorPrimary" android:id="@id/about_more_apps" android:paddingTop="@dimen/activity_margin" android:paddingBottom="@dimen/activity_margin" android:layout_width="-1" android:layout_height="-2" android:text="@string/more_apps_underlined" android:layout_below="@id/about_email" />
        <TextView android:textColor="@color/colorPrimary" android:id="@id/about_invite" android:paddingTop="@dimen/activity_margin" android:paddingBottom="@dimen/activity_margin" android:layout_width="-1" android:layout_height="-2" android:text="@string/invite_friends_underlined" android:layout_below="@id/about_more_apps" />
        <TextView android:textColor="@color/colorPrimary" android:id="@id/about_rate_us" android:paddingTop="@dimen/activity_margin" android:paddingBottom="@dimen/activity_margin" android:layout_width="-1" android:layout_height="-2" android:text="@string/rate_us_underlined" android:layout_below="@id/about_invite" />
        <TextView android:textColor="@color/colorPrimary" android:id="@id/about_license" android:paddingTop="@dimen/activity_margin" android:paddingBottom="@dimen/activity_margin" android:layout_width="-1" android:layout_height="-2" android:text="@string/third_party_licences_underlined" android:layout_below="@id/about_rate_us" />
        <TextView android:textColor="@color/colorPrimary" android:id="@id/about_donate" android:paddingTop="@dimen/activity_margin" android:paddingBottom="@dimen/activity_margin" android:layout_width="-1" android:layout_height="-2" android:text="@string/donate_underlined" android:layout_below="@id/about_license" />
        <TextView android:id="@id/about_follow_us" android:paddingTop="@dimen/activity_margin" android:paddingBottom="@dimen/social_padding" android:layout_width="-1" android:layout_height="-2" android:text="@string/follow_us" android:layout_below="@id/about_donate" />
        <ImageView android:id="@id/about_facebook" android:layout_width="@dimen/social_logo" android:layout_height="@dimen/social_logo" android:src="@mipmap/facebook" android:layout_below="@id/about_follow_us" />
        <ImageView android:id="@id/about_gplus" android:layout_width="@dimen/social_logo" android:layout_height="@dimen/social_logo" android:layout_marginLeft="@dimen/social_padding" android:layout_marginRight="@dimen/social_padding" android:src="@mipmap/gplus" android:layout_toRightOf="@id/about_facebook" android:layout_below="@id/about_follow_us" />
        <TextView android:gravity="51" android:id="@id/about_copyright" android:paddingTop="@dimen/activity_margin" android:layout_width="-1" android:layout_height="-1" android:text="v1.0
Copyright © Simple Mobile Tools 2016" android:layout_below="@id/about_gplus" android:layout_alignParentBottom="true" />
    </RelativeLayout>
</ScrollView>
